Quorum3/Library/Tests/Templating/Fail/PassBooleanTakesInteger_1.quorum
class main
    action Main
        Test<integer> something
        something:doSomething(true)
    end
end